force-app/main/default/objects/Class_kasitech__c/Class_kasitech__c.object-meta.xml
<CustomObject>
    <label>Class</label>
    <nameField>
        <label>Class  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>