force-app/main/default/objects/Class_kasitech__c/fields/Account_choose__c.field-meta.xml
<CustomField>
    <fullName>Account_choose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>choose Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>classes (choose Account)</relationshipLabel>
    <relationshipName>classes1</relationshipName>
    <type>Lookup</type>
</CustomField>