force-app/main/default/objects/Class_kasitech__c/fields/Class_Amount__c.field-meta.xml
<CustomField>
    <fullName>Class_Amount__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>The value of the class</inlineHelpText>
    <label>Class Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>