force-app/main/default/objects/Class_kasitech__c/fields/class_call_number__c.field-meta.xml
<CustomField>
    <fullName>class_call_number__c</fullName>
    <label>class call number</label>
    <type>Phone</type>
</CustomField>