force-app/main/default/objects/Class_kasitech__c/fields/class_duration_on_class_rating__c.field-meta.xml
<CustomField>
    <fullName>class_duration_on_class_rating__c</fullName>
    <formula>DATE(YEAR( DATEVALUE( CreatedDate ) )   +  VALUE(Text( Class_rating__c )), MONTH(DATEVALUE( CreatedDate )) ,  DAY( DATEVALUE( CreatedDate )) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>class duration on class rating</label>
    <type>Date</type>
</CustomField>