force-app/main/default/objects/Class_kasitech__c/fields/class_enrolled__c.field-meta.xml
<CustomField>
    <fullName>class_enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is to see whether this record is enrolled in the class or not</inlineHelpText>
    <label>class enrolled</label>
    <type>Checkbox</type>
</CustomField>