force-app/main/default/objects/Class_kasitech__c/fields/Class_Location__c.field-meta.xml
<CustomField>
    <fullName>Class_Location__c</fullName>
    <label>Class Location</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>