force-app/main/default/objects/Class_kasitech__c/fields/class_number__c.field-meta.xml
<CustomField>
    <fullName>class_number__c</fullName>
    <displayFormat>PO# {00000000}</displayFormat>
    <label>class number</label>
    <type>AutoNumber</type>
</CustomField>