force-app/main/default/objects/Class_kasitech__c/fields/Class_rating_select__c.field-meta.xml
<CustomField>
    <fullName>Class_rating_select__c</fullName>
    <formula>VALUE(TEXT( Class_rating__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class rating select</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>