force-app/main/default/objects/Class_kasitech__c/fields/Class_Start_date_and_time__c.field-meta.xml
<CustomField>
    <fullName>Class_Start_date_and_time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Class Start date and time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>