force-app/main/default/objects/Class_kasitech__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <label>Courses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>salesforce course</fullName>
            </value>
            <value>
                <fullName>peoplesoft course</fullName>
            </value>
            <value>
                <fullName>Java course</fullName>
            </value>
            <value>
                <fullName>.Net course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>