force-app/main/default/objects/Class_kasitech__c/fields/related_Class__c.field-meta.xml
<CustomField>
    <fullName>related_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>related Class</label>
    <referenceTo>Class_kasitech__c</referenceTo>
    <relationshipLabel>classes</relationshipLabel>
    <relationshipName>classes</relationshipName>
    <type>Lookup</type>
</CustomField>