force-app/main/default/objects/Class_kasitech__c/recordTypes/First_class.recordType-meta.xml
<RecordType>
    <fullName>First_class</fullName>
    <active>true</active>
    <label>First class</label>
</RecordType>