force-app/main/default/objects/Class_kasitech__c/recordTypes/Second_Class.recordType-meta.xml
<RecordType>
    <fullName>Second_Class</fullName>
    <active>true</active>
    <label>Second Class</label>
</RecordType>