force-app/main/default/objects/Class_kasitech__c/validationRules/Validation_on_the_class_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_the_class_amount</fullName>
    <active>true</active>
    <errorConditionFormula>Class_Amount__c  &gt;=  100</errorConditionFormula>
    <errorDisplayField>Class_Amount__c</errorDisplayField>
    <errorMessage>Class amount cannot be more than 99.99</errorMessage>
</ValidationRule>